recursion.lessons.recursion.tree.Tree.scala.error
Tree:14: error: expected class or object definition
	def subtree(steps:Int, length:Double, angle:Double, shrink:Double)	{
        ^Tree:28: error: expected start of definition
	override def run() {
                 ^Tree:32: error: Unmatched closing brace '}' ignored here
}
^